Fixed webpack, removed front-end dir cuz was super stuck

--- a/src/components/nav-bar/navBar.css
+++ b/src/components/nav-bar/navBar.css
@@ -1,5 +1,4 @@
 .navBar {
-  position: relative;
   background-color: orange;
   height: 4rem;
 }
